# Covenant-Enterprise

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  ENTERPRISE_GUIDE.md  LICENSE  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  covenant_cli.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  start.sh
.github/workflows/: build.yml  ci.yml  constitution_check.yml  docker-ci.yml  docker.yml  security.yml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  category_theory.md  formal_guarantees.md  formal_model.tex  manifesto.md
examples/: basic_usage.py  enterprise_deployment.py  llm_guard.py
src/covenant/: __init__.py
src/covenant/advisory/: neural_symbolic_reasoner.py
src/covenant/agents/: agent.py  agent_factory.py  communication_layer.py  consensus_protocol.py  self_improvement.py  swarm_orchestrator.py
src/covenant/api/: enterprise_routes.py  main.py  routes.py  schemas.py
src/covenant/blockchain/: audit.py  audit_log.py  audit_trail.py
src/covenant/commandments/: commandment_01_authority.py  commandment_02_integrity.py  commandment_03_identity.py  commandment_04_sustainability.py  commandment_05_preserve_life.py  commandment_06_fidelity.py  commandment_07_property.py  commandment_08_truth.py  commandment_09_testimony.py  commandment_10_intent.py
src/covenant/core/: constitutional_engine.py  constraint_solver.py  constraints.py  corporate_constitution.py  covenant_layer.py  engine.py  enterprise_engine.py  ethics_engine.py  formal_verifier.py  neural_symbolic_reasoner.py  quantum_optimizer.py  state_filter.py
src/covenant/llm/: llm_integration.py
src/covenant/optimization/: optimizer_pipeline.py  quantum_optimizer.py
src/covenant/security/: zero_trust.py
src/covenant/utils/: exceptions.py
src/covenant/verification/: constraint_solver.py  formal_verifier.py
tests/: integration_test.py  test_allignment_evals.py  test_commandment_01.py  test_commandment_02.py  test_commandment_03.py  test_commandment_04.py  test_commandment_05.py  test_commandment_06.py  test_commandment_07.py  test_commandment_08.py  test_commandment_09.py  test_commandment_10.py  test_covenant.py  test_optimizer_pipeline.py  test_self_improvement.py
