[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.venv
  | build
  | dist
  | covenant-ai-enterprise-complete.tar.gz
)/
'''

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "src"
exclude = "(venv|build|dist)"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --disable-warnings"

[tool.pylint.MASTER]
ignore = ["venv", "build", "dist"]

[tool.pylint.FORMAT]
max-line-length = 100
