[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "covenant-enterprise"
version = "0.1.0"
description = "Covenant-Based Autonomous Intelligence (CBAI)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Covenant.AI Team" }
]

dependencies = []

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "mypy",
  "pylint",
  "pytest",
  "pytest-cov"
]

# -------------------------
# BLACK CONFIG
# -------------------------
[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

# -------------------------
# ISORT CONFIG (CRITICAL)
# -------------------------
[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src"]
known_first_party = ["covenant"]
combine_as_imports = true
force_sort_within_sections = true
lines_after_imports = 2
skip_gitignore = true

# -------------------------
# MYPY CONFIG
# -------------------------
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_return_any = false
warn_unused_configs = true
show_error_codes = true
exclude = "(venv|build|dist)"

# -------------------------
# PYTEST CONFIG
# -------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

# -------------------------
# PYLINT CONFIG
# -------------------------
[tool.pylint.MASTER]
ignore = ["venv", "build", "dist"]

[tool.pylint.FORMAT]
max-line-length = 88
